RESOLVED FIXED98718
SVG animation of CSS value does not always reset
https://bugs.webkit.org/show_bug.cgi?id=98718
Summary SVG animation of CSS value does not always reset
Philip Rogers
Reported 2012-10-08 22:00:06 PDT
Created attachment 167688 [details] Testcase If we animate a CSS value using SVG and change the animation, the animated CSS value does not reset. In the attached testcase, opacity is animated to 0.5 and then the animation is changed so that 'x' is being animated, but the opacity remains at 0.5.
Attachments
Testcase (341 bytes, text/html)
2012-10-08 22:00 PDT, Philip Rogers
no flags
Brent Fulgham
Comment 1 2022-07-15 15:36:08 PDT
I don't see X animating at all. Still, Chrome and Firefox return opacity to 1.0, which Safari does not. There appears to be a bug of some kind here
Radar WebKit Bug Importer
Comment 2 2022-07-15 15:36:19 PDT
Ahmad Saleem
Comment 3 2023-09-21 09:31:44 PDT
Still reproducible
Ahmad Saleem
Comment 5 2026-03-19 00:33:17 PDT
EWS
Comment 6 2026-03-20 08:09:56 PDT
Committed 309621@main (f295098a858c): <https://commits.webkit.org/309621@main> Reviewed commits have been landed. Closing PR #60919 and removing active labels.
Ahmad Saleem
Comment 7 2026-04-01 02:42:05 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/58906
Note You need to log in before you can comment on or make changes to this bug.